--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -7,21 +7,21 @@
    ========================================================================== */
 
 .sidebar {
-  -webkit-transform: translate3d(0, 0 , 0);
-          transform: translate3d(0, 0 , 0);
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
 
   @include clearfix();
   margin-bottom: 1em;
 
   @media screen and (min-width: $sidebar-screen-min-width) {
     height: 100vh;
-    overflow-y: auto;               // Add scrollbar if the sidebar is too long
+    overflow-y: auto; // Add scrollbar if the sidebar is too long
     position: fixed;
     padding-top: $masthead-height;
   }
 
   @include breakpoint($large) {
-    @include span(2 of 12);
+    width: 300px; // 将宽度设置为300px，你可以根据需要调整
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
@@ -32,7 +32,7 @@
   }
 
   @include breakpoint($x-large) {
-    max-width: $sidebar-link-max-width;
+    max-width: 350px; // 为更大屏幕设置最大宽度
     padding-right: 0;
   }
 
@@ -55,6 +55,7 @@
     width: 100%;
   }
 }
+
 
 .sidebar__right {
   margin-bottom: 1em;
