--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -7,21 +7,21 @@
    ========================================================================== */
 
 .sidebar {
-  -webkit-transform: translate3d(0, 0 , 0);
-          transform: translate3d(0, 0 , 0);
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
 
   @include clearfix();
   margin-bottom: 1em;
 
   @media screen and (min-width: $sidebar-screen-min-width) {
     height: 100vh;
-    overflow-y: auto;               // Add scrollbar if the sidebar is too long
+    overflow-y: auto;
     position: fixed;
     padding-top: $masthead-height;
   }
 
   @include breakpoint($large) {
-    @include span(2 of 12);
+    width: 300px; // 左侧栏宽度
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
@@ -32,28 +32,21 @@
   }
 
   @include breakpoint($x-large) {
-    max-width: $sidebar-link-max-width;
+    max-width: 350px; // 左侧栏在更大屏幕上的最大宽度
     padding-right: 0;
   }
+}
 
-  h2, h3, h4, h5, h6 {
-    margin-bottom: 0;
-    font-family: $sans-serif-narrow;
+.main-content {
+  @include breakpoint($large) {
+    margin-left: 300px; // 与左侧栏宽度相匹配
   }
 
-  h3, h4 {
-    font-size: $type-size-5;
+  @include breakpoint($x-large) {
+    margin-left: 350px; // 在更大屏幕上与左侧栏最大宽度匹配
   }
 
-  p, li {
-    font-family: $sans-serif;
-    font-size: $type-size-6;
-    line-height: 1.5;
-  }
-
-  img {
-    width: 100%;
-  }
+  padding: 1em; // 为内容添加一些填充
 }
 
 .sidebar__right {
